@@ -36,6 +36,7 @@ CUSTOMIZATION_SCRIPT="$REMASTER_CUSTOMIZE_RELATIVE_DIR/customize"
 APT_CACHE_SAVE_DIR=~/tmp/remaster-apt-cache
 NEW_FILES_DIR=~/tmp/remaster-new-files
 KEEP_PREVIOUS_ISO_EXTRACTION="no"
+KEEP_PREVIOUS_REMASTER_DIR="no"
 
 echo "Starting CD remastering on " `date`
 echo "Customization dir=$CUSTOMIZE_DIR"
@@ -85,7 +86,17 @@ if [ "$KEEP_PREVIOUS_ISO_EXTRACTION" = "no" ] ; then
 fi
 
 if [ "$CUSTOMIZE_ROOTFS" = "yes" ] ; then
-	unpack_rootfs
+	if [ -e "$REMASTER_DIR" ]; then
+		dialog_question "Previous data found" "UCK found a previous remaster directory, do you want to continue a previous session?"
+		RESULT=$?
+		if [ $RESULT == 0 ] ; then
+			KEEP_PREVIOUS_REMASTER_DIR="yes"
+		fi
+	fi
+
+	if [ "$KEEP_PREVIOUS_REMASTER_DIR" = "no" ] ; then
+		unpack_rootfs
+	fi
 fi
 
 if [ "$CUSTOMIZE_INITRD" = "yes" ] ; then
@@ -125,6 +136,13 @@ fi
 
 if [ "$CUSTOMIZE_ROOTFS" = "yes" ] ; then
 	pack_rootfs
+
+	dialog_question "Save session?" "Do you want to keep all data to eventually do some customization later?"
+	RESULT=$?
+	if [ $RESULT -ne 0 ] ; then
+		remove_remaster_dir
+	fi
 fi
 
+remove_remaster_initrd
 pack_isofs
